plugins {
	id 'java'
	id 'org.springframework.boot' version '3.2.4'
	id 'io.spring.dependency-management' version '1.1.4'
}

group = 'te'
version = '0.0.1-SNAPSHOT'

java {
	java {
		sourceCompatibility = JavaVersion.VERSION_21
		targetCompatibility = JavaVersion.VERSION_21
	}

}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	//jpa
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

	//security
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'

  	//validator
	implementation 'org.hibernate.validator:hibernate-validator'

	testImplementation 'org.springframework.security:spring-security-test'

	//view
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'

	// spring boot
	implementation 'org.springframework.boot:spring-boot-starter-web'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'

	//lombok
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'

	// springdoc ->swagger
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.4.0'

	// javamail
	implementation 'org.springframework.boot:spring-boot-starter-mail'

	// jwt
	implementation group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.11.5'
	runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.11.5'
	runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.11.5'

	// 개발 편의용
	developmentOnly 'org.springframework.boot:spring-boot-devtools'

	//mysql
	//runtimeOnly 'com.mysql:mysql-connector-j'

	//mariaDB
	runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'

	//env
	implementation 'io.github.cdimascio:java-dotenv:5.2.2'

	//MS Azure
	implementation 'com.azure:azure-storage-blob:12.25.1'
	implementation 'io.projectreactor.netty:reactor-netty-http:1.1.18'  // Replace '1.1.x' with the specific minor version you prefer
	implementation 'io.projectreactor:reactor-core:3.6.5'

	// firebase
	implementation 'com.google.firebase:firebase-admin:8.0.1'
}

tasks.named('test') {
	useJUnitPlatform()
}
